// Copyright 2022 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.


package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";


enum VertexMetadataSchemaSchemaTypeEnum {
  VertexMetadataSchemaSchemaTypeEnumNO_VALUE_DO_NOT_USE = 0;
  VertexMetadataSchemaSchemaTypeEnumMETADATA_SCHEMA_TYPE_UNSPECIFIED = 1;
  VertexMetadataSchemaSchemaTypeEnumARTIFACT_TYPE = 2;
  VertexMetadataSchemaSchemaTypeEnumEXECUTION_TYPE = 3;
  VertexMetadataSchemaSchemaTypeEnumCONTEXT_TYPE = 4;
}

message VertexMetadataSchema {
  string name = 1;
  string schema_version = 2;
  string schema = 3;
  VertexMetadataSchemaSchemaTypeEnum schema_type = 4;
  string create_time = 5;
  string project = 6;
  string location = 7;
  string metadata_store = 8;
}

message ApplyVertexMetadataSchemaRequest {
  VertexMetadataSchema resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteVertexMetadataSchemaRequest {
  string service_account_file = 1;
  VertexMetadataSchema resource = 2;
}

message ListVertexMetadataSchemaRequest {
  string service_account_file = 1;
  string Project = 2;
  string Location = 3;
  string MetadataStore = 4;
}

message ListVertexMetadataSchemaResponse {
  repeated VertexMetadataSchema items = 1;
}

service VertexMetadataSchemaService {
  rpc ApplyVertexMetadataSchema(ApplyVertexMetadataSchemaRequest) returns (VertexMetadataSchema);
  rpc DeleteVertexMetadataSchema(DeleteVertexMetadataSchemaRequest) returns (google.protobuf.Empty);
  rpc ListVertexMetadataSchema(ListVertexMetadataSchemaRequest) returns (ListVertexMetadataSchemaResponse);
}
